# gallery-booking-invoice-api

./: cloudinary_upload_code  invoice_fields.txt  pyproject.toml  requirements.txt
app/: main.py
app/configs/: cloudinary_config.py  context_manager.py  db.py  dependency.py  mail.py  settings.py
app/enums/: booking_enums.py  expense_enums.py  gallery_enums.py
app/exceptions/: handlers.py
app/listeners/: send_email_listener.py
app/routes/: admin_stat.py  auth.py  booking.py  contact.py  expense.py  gallery.py  invoice.py  search.py  stat.py
app/schemas/: auth_schema.py  booking_schema.py  contact_schema.py  expense_schema.py  gallery_schema.py  invoice_schema.py
app/security/: jwt.py  password.py
app/serializers/: booking_serializer.py  contact_serializer.py  expense_serializer.py  gallery_serializer.py  invoice_serializer.py  search_serializer.py  user_serializer.py
app/services/: admin_stat_service.py  auth_service.py  booking_service.py  cloudinary_service.py  contact_service.py  expense_service.py  gallery_service.py  r2_service.py  search_service.py  stat_service.py  supabase_service.py
app/signals/: send_email_signal.py
app/static/css/: styles.min.css
app/templates/: index.html
app/templates/email/: base.html  contact_created.html  email_verification.html  password_reset.html
app/utils/: aggregate_pipelines.py  auth.py  datetime_formatter.py  mail.py  mongo.py  random_id.py  responses.py  serializers.py  shortcuts.py
