[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloudinary>=1.44.1",
    "fastapi>=0.116.1",
    "fastapi-mail>=1.5.0",
    "pydantic[email]>=2.11.7",
    "pymongo[async,srv]>=4.14.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
