[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blinker>=1.9.0",
    "boto3>=1.41.2",
    "cloudinary>=1.44.1",
    "fastapi>=0.116.1",
    "fastapi-jwt[authlib]>=0.3.0",
    "fastapi-mail>=1.5.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pymongo[srv]>=4.14.1",
    "python-multipart>=0.0.20",
    "supabase>=2.22.2",
    "uvicorn>=0.35.0",
]
